# qscreen

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  README_CN.md
crates/qscreen-client/: Cargo.toml
crates/qscreen-client/src/: color.rs  main.rs  term.rs
crates/qscreen-daemon/: Cargo.toml
crates/qscreen-daemon/src/: lib.rs  session.rs
crates/qscreen-protocol/: Cargo.toml
crates/qscreen-protocol/src/: lib.rs
crates/qscreen-shared/: Cargo.toml
crates/qscreen-shared/src/: lib.rs
crates/vt100-psmux/: Cargo.toml
crates/vt100-psmux/src/: attrs.rs  callbacks.rs  cell.rs  grid.rs  lib.rs  perform.rs  row.rs  screen.rs  term.rs
docs/: manual-validation-multi-attach-clients.md
docs/plans/: wf-cmd-shell-support-20260522-91e9.md  wf-multi-attach-clients-20260522-36f5.md
docs/reports/: wf-cmd-shell-support-20260522-91e9.md  wf-multi-attach-clients-20260522-36f5.md
docs/results/: phase-01-daemon-shell-selection.md  phase-01-protocol-client-handshake.md  phase-02-daemon-multi-client-broadcast.md  phase-02-document-windows-shell-config.md  phase-03-focus-input-resize-semantics.md  phase-03-workspace-verification.md  phase-04-tests-docs-validation.md
docs/reviews/phases/: phase-01-daemon-shell-selection.md  phase-01-protocol-client-handshake.md  phase-02-daemon-multi-client-broadcast.md  phase-02-document-windows-shell-config.md  phase-03-focus-input-resize-semantics.md  phase-03-workspace-verification.md  phase-04-tests-docs-validation.md
docs/reviews/spec-final/: wf-cmd-shell-support-20260522-91e9.md  wf-multi-attach-clients-20260522-36f5.md
docs/reviews/specs/: wf-cmd-shell-support-20260522-91e9.md  wf-multi-attach-clients-20260522-36f5.md
docs/specs/: wf-cmd-shell-support-20260522-91e9.md  wf-multi-attach-clients-20260522-36f5.md
docs/tasks/: phase-01-daemon-shell-selection.md  phase-01-protocol-client-handshake.md  phase-02-daemon-multi-client-broadcast.md  phase-02-document-windows-shell-config.md  phase-03-focus-input-resize-semantics.md  phase-03-workspace-verification.md  phase-04-tests-docs-validation.md
scripts/: package-windows-gz.sh
tests-rs/: test_issue155_sgr_attrs.rs  test_vt100_screen.rs
