[workspace]
members = [
    "crates/qscreen-protocol",
    "crates/qscreen-shared",
    "crates/qscreen-daemon",
    "crates/qscreen-client",
    "crates/vt100-psmux",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.3.0"
license = "MIT"
description = "Lightweight terminal session manager with detachable qscn sessions"
repository = "https://github.com/dualface/qscreen"
readme = "README.md"
keywords = ["terminal", "session", "qscn"]
categories = ["command-line-utilities"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
crossterm = "0.28"
anyhow = "1"
bytes = "1"
vt100 = { path = "crates/vt100-psmux", package = "vt100-psmux" }
unicode-width = "0.2"
qscreen-protocol = { path = "crates/qscreen-protocol" }
qscreen-shared = { path = "crates/qscreen-shared" }
qscreen-daemon = { path = "crates/qscreen-daemon" }

[profile.release]
opt-level = 3
lto = true
