[package]
name = "qscreen-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "qscn"
path = "src/main.rs"

[dependencies]
qscreen-protocol = { workspace = true }
qscreen-shared = { workspace = true }
qscreen-daemon = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
vt100 = { workspace = true }
