[package]
name = "qscreen-daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "qscreen_daemon"
path = "src/lib.rs"

[dependencies]
qscreen-protocol = { workspace = true }
qscreen-shared = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
portable-pty = "0.8"
vt100 = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Windows 平台仅需 tokio 的 named_pipe 实现（包含在 tokio full feature 内）
